# smoke_project

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst
docs/source/apidocs/: smoke.convert.rst  smoke.load.errors.rst  smoke.load.rst  smoke.rst  smoke.utils.rst
smoke/amalgamate/: Amalgamator.py  run_amalgamator.py  run_amalgamator_config.yml
smoke/amalgamate/errors/: errors.py
smoke/box/: Box.py  FeatureTimeSpaceGrid.py  compute_square.py  hough_assignment.py  in_bounds.py  visualize_stations.py
smoke/clean/: cleaners.py  run_cleaners.py  run_cleaners_config.yml  toolset.py
smoke/convert/: README.md  bluesky_to_nc.py  firework_to_nc.py  frp_to_nc.py  modis_aod_to_nc.py  smoke_plume_to_nc.py
smoke/load/: datasets.py  parsers.py
smoke/load/errors/: errors.py
smoke/noaa/: BoxMapper.py  amal_logic_test.py  geohashparser.py  get_smokeplume_counts.py  plot_grid.py  plot_time_series_noaa.py  rungeohashing.py
smoke/split/: frp_splitter.py
smoke/utils/: utilities.py
smoke_tools/: build_pm25.py  convert_kmz.py  save_pm25.py  save_pm25_linear.py  station_subset.py
tests/box/: test_FeatureTimeSpaceGrid.py  test_SaveLoadFTSG.py  test_TemporaryTimeSpaceGrid.py
tests/clean/: config.yml  test_CellCruncher.py  test_TimeCruncher.py  test_cleaners_manually.py
tests/load/: test_GeographicalDataset.py  test_parsers.py
tests/split/: test_frp_splitter.py
tests/split/testfiles/: paired_down_fire_archive.dbf  paired_down_fire_archive.shp  paired_down_fire_archive.shx  split_fire_archive_hour_20180411T19.hdf  (+10 more)
