[metadata]
name = smoke_tools
version = 0.0.1
description = DSSG Smoke Project tools
author = DSSG Smoke Team
license = Apache License, Version 2.0
platform = Linux

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    Click
    netCDF4
    numpy
    pandas
    xarray
    python-dateutil
    xmltodict
    pillow